--- a/shop/package.json
+++ b/shop/package.json
@@ -24,7 +24,7 @@
   "private": true,
   "packageManager": "npm@10.8.2",
   "dependencies": {
-    "@angular/animations": "^21.1.1",
+    "@angular/animations": "^21.0.8",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
@@ -33,6 +33,8 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
